--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 	</head>
 
 <body>
-	<div class="blockblock">
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos a obcaecati dolorem quasi, itaque nostrum omnis, iure suscipit, sequi distinctio sed tempora repellat. Exercitationem, soluta.
+	<div class="fonts_Noto_Serif">
+		Шрифт Noto_Serif
+	</div>
+	<div class="fonts_Noto_Sans">
+		Шрифт Noto_Sans
+	</div>
+	<div class="fonts_FuturaLight">
+		Шрифт Playfair Display
+	</div>
+	<div class="fonts_FuturaLight">
+		Шрифт FuturaLight
 	</div>
 </body>
 </html>
