--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 	</head>
 
 <body>
-	<div class="fonts_Noto_Serif">
-		Шрифт Noto_Serif
-	</div>
-	<div class="fonts_Noto_Sans">
-		Шрифт Noto_Sans
-	</div>
-	<div class="fonts_FuturaLight">
-		Шрифт Playfair Display
-	</div>
-	<div class="fonts_FuturaLight">
-		Шрифт FuturaLight
+	<div class="microNews">
+		<div class="fonts_Noto_Serif">
+			Шрифт Noto_Serif
+		</div>
+		<div class="fonts_Noto_Sans">
+			Шрифт Noto_Sans
+		</div>
+		<div class="fonts_FuturaLight">
+			Шрифт Playfair Display
+		</div>
+		<div class="fonts_FuturaLight">
+			Шрифт FuturaLight
+		</div>
 	</div>
 </body>
 </html>
