--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
 	</head>
 
 <body>
-	<header class="micro_news">
-		<div class="headerNews_logo">
+<main class="main_news">
+	<header class="header_news">
+		<div class="header_news_logo">
 	<img src="https://micro-electronics.ru/upload/upload_files/logo/microel_logo-2_2_23.png" alt="">
 </div>
-<div class="headerNews_contacts">
-	<div class="headerNews_text">
-		<div class="headerNews_name">
+<div class="header_news_contacts">
+	<div class="header_news_text">
+		<div class="header_news_name">
 			Телефон
 		</div>
-		<div class="headerNews_phone">
+		<div class="header_news_phone">
 			+7 (495) 105 96 88
 		</div>
 	</div>
-	<div class="headerNews_text">
-		<div class="headerNews_name">
+	<div class="header_news_text">
+		<div class="header_news_name">
 			E-mail
 		</div>
-		<div class="headerNews_mail">
+		<div class="header_news_mail">
 			info@micro-electronics.ru
 		</div>
 	</div>
@@ -35,7 +36,7 @@
 </div>
 	
 	</header>
-	<footer class="micro_news">
+	<footer class="footer_news">
 		<footer class="footerNews">
 	<div class="containerNews">
 		<ul class="social">
@@ -74,7 +75,7 @@
 		<div class="fonts_FuturaLight">
 			Шрифт FuturaLight
 		</div>
-
+</main>
 	
 </body>
 </html>
